syntax = "proto3";
option go_package = "grpc-tutorial/api/proto/unary";
import  "api/proto/base/base.proto";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}